# SortAlgorithms

./: .gitignore  ArrayGenerator.cpp  ArrayGenerator.h  CMakeLists.txt  FileHandler.cpp  FileHandler.h  IsSorted.cpp  IsSorted.h  Test.cpp  Test.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  main.cpp
SortAlgorithms/: HeapSort.cpp  HeapSort.h  ISort.cpp  ISort.h  InsertionSort.h  QuickSort.cpp  QuickSort.h  ShellSort.cpp  ShellSort.h
